--- a/simple_jwt_api.yml
+++ b/simple_jwt_api.yml
@@ -1,26 +1,11 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: simple-jwt-api
-spec:
-  type: LoadBalancer
-  ports:
-    - port: 80
-      targetPort: 8080
-  selector:
-    app: simple-jwt-api
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: simple-jwt-api
+  labels:
+    app: simple-jwt-api
 spec:
-  replicas: 3
-  strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxUnavailable: 2
-      maxSurge: 2
+  replicas: 2  # Number of pods
   selector:
     matchLabels:
       app: simple-jwt-api
@@ -30,11 +15,26 @@ spec:
         app: simple-jwt-api
     spec:
       containers:
-        - name: simple-jwt-api
-          image: CONTAINER_IMAGE
-          securityContext:
-            privileged: false
-            readOnlyRootFilesystem: false
-            allowPrivilegeEscalation: false
-          ports:
-            - containerPort: 8080
+      - name: simple-jwt-api
+        image: your-docker-repo/simple-jwt-api:latest  # Replace with your actual Docker image
+        ports:
+        - containerPort: 8080  # Adjust if your app runs on a different port
+        env:
+        - name: JWT_SECRET
+          valueFrom:
+            secretKeyRef:
+              name: jwt-secret
+              key: secret
+        # Add other environment variables as needed
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: simple-jwt-api
+spec:
+  type: LoadBalancer  # This creates an external load balancer
+  ports:
+    - port: 80        # Port exposed by the service
+      targetPort: 8080  # Port on which the container is listening
+  selector:
+    app: simple-jwt-api  # Match the labels in the Deployment
